# ai-sports-clipper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: ppl.yaml
integrations/hermes/: README.md  clipper-worker.service.example  config.example.yaml  install.sh
integrations/hermes/padel-clipper/: SKILL.md
src/sports_clipper/: __init__.py  agent_tools.py  audio_analysis.py  ball_reframe.py  brand_assets.py  candidate_detection.py  cli.py  clip_exporter.py  drive_download.py  hermes_mcp.py  job_queue.py  job_worker.py  models.py  motion_analysis.py  scoring.py  simple_cli.py  social_composer.py  source_ingestion.py  unified_pipeline.py  video_info.py
tests/: test_agent_tools.py  test_ball_reframe.py  test_brand_assets.py  test_candidates.py  test_drive_download.py  test_hermes_mcp.py  test_job_queue.py  test_job_worker.py  test_social_composer.py  test_source_ingestion.py  test_unified_pipeline.py  test_video_info.py
