[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sports-clipper"
version = "0.2.0"
description = "Find, rank, and export sports highlight candidates from long-form video."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gdown>=6.1,<7",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.9,<5",
  "PyYAML>=6,<7",
  "yt-dlp>=2026.7.4,<2027",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
sports-clipper = "sports_clipper.cli:main"
clipper = "sports_clipper.simple_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
